2008-05-21  Lillian Angel  <langel@redhat.com>

	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
	* patches/icedtea-libraries.patch: Updated LDLIBS.

2008-05-21  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.
	* Makefile.am: Updated to build with ecj properly.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* javac.in: Changed to use 1.6 source.

2008-03-27  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Added icedtea-netx-applet-visibility.patch.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* patches/icedtea-webservices.patch: Moved patches to sun.applet from
	here ...
	* patches/icedtea-netx-applet-visbility.patch: To here. New file.

2008-03-26  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(dist-openjdk): Fixed to only remove hg-related files from the openjdk
	clone.
	* Makefile.in: Regenerated.

2008-03-06  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_zero/vm/globals_linux_zero.hpp
	(ThreadStackSize): Increased by 512kb to cope with 64kb pages.

2008-03-04  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Check for xulrunner-1.9.
	* configure: Regenerated.

2008-03-03  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed distclean target
	* Makefile.in: Regenerated.

2008-03-03  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ports.patch
	(hotspot/src/share/vm/runtime/mutex.hpp): Reworked.

2008-03-03  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: Removed.
	* Makefile.am (ICEDTEA_PATCHES): Removed the above.
	* Makefile.in: Regenerated.

	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
	(current_stack_region): Fudge reported stack size.

2008-02-29  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: More.

2008-02-29  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.